# urc-machiato-2026

./: .cursorrules  .env.unified  .gitignore  .gitmodules  .pre-commit-config.yaml  .project_structure.md  =3.9.0  ADVANCED_SYSTEMS_IMPLEMENTATION_README.md  AGENTS.md  API_DOCUMENTATION.md  CLEANUP_AND_VERIFICATION_REPORT.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_VISUAL_SUMMARY.md  CODEBASE_CLEANUP_PLAN.md  COLCON_IGNORE  COMPETITION_README.md  COMPREHENSIVE_SYSTEM_STATUS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_README.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_INTEGRATION_SUMMARY.md  FINAL_STATUS_REPORT.md  HARDWARE_READINESS_REPORT.md  INTEGRATION_README.md  MERGE_COMPLETE_SUMMARY.md  MERGE_TO_MAIN_INSTRUCTIONS.md  MIGRATION_GUIDE.md  PHASE_2_COMPLETE_SUMMARY.md  PRE_MERGE_VALIDATION_REPORT.md  QUALITY_IMPROVEMENT_TRACKER.md  QUALITY_TRANSFORMATION_SUMMARY.md  README.md  READY_FOR_MERGE_SUMMARY.md  ROS2_ARCHITECTURE_DIAGRAMS_README.md  ROS2_INTEGRATION_TESTING_REPORT.md  SIMPLIFICATION_VERIFICATION_REPORT.md  SYSTEM_DIAGRAM.txt  SYSTEM_TEST_REPORT.md  (+34 more)
.github/: SECURITY.md  labeler.yml
bridges/: README.md  can_mock_simulator.py  dashboard_simulation_bridge.py  map_data_bridge.py  priority_message_router.py  slam_data_bridge.py  websocket_mission_bridge.py  websocket_slam_bridge.py
config/: calibration_manager.yaml  competition.yaml  config_manager.py  config_validator.py  development.yaml  docker_development.yaml  docker_simulation.yaml  docker_testing.yaml  mission_configs.yaml  production.yaml  realsense_d435.yaml  rover.yaml
data/: urc_database.db
docker/: Dockerfile.critical-systems  Dockerfile.prod  Dockerfile.test  Dockerfile.unified  Dockerfile.universal  README.md  docker-compose.monitoring.yml  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.unified.yml  docker-compose.universal.yml  run_all_tests.sh  run_comprehensive_tests.sh  run_tests_in_docker.sh  run_tests_with_workspace.sh  test_complete_system.sh  test_environment_complete.sh
docs/: ADVANCED_SYSTEMS_IMPLEMENTATION_README.md  BRIDGE_INTEGRATION_ARCHITECTURE.md  CNAME  DASHBOARD_QUICK_START.md  DEPLOYMENT_VALIDATION.md  INTEGRATION_README.md  Makefile  README.md  ROS2_TOPICS_SERVICES_REFERENCE.md  SUBMODULE_INTERFACE_SPECIFICATION.md  arm_guide.rst  big_picture.rst  build_docs.py  build_docs.sh  code_review_process.rst  conf.py  constraints.md  diagrams_overview.rst  getting_started.rst  hardware_integration.rst  index.rst  installation.rst  jsdoc.json  network_guide.rst  onboarding_flow.puml  quality_standards.rst  quickstart.rst  quickstart_new.rst  requirements.txt  rules.md  simulation_testing_guide.rst  slam_nav_guide.rst  testing_guide.rst  testing_optimization_guide.rst  unified-docker-system.md  unified_systems.rst
frontend/: Dockerfile.prod  enhanced_operator_dashboard.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
install/: local_setup.sh  setup.sh
launch/: README.md  integrated_bridge_system.launch.py  integrated_system.launch.py  mission_system.launch.py  rover_simulation.launch.py  slam_bridge.launch.py  slam_system.launch.py
log/: latest_build  latest_list
missions/: README.md  autonomous_keyboard_mission.py  config_validator.py  debug_mission.py  delivery_mission.py  emergency_response_coordinator.py  follow_me_mission.py  hardware_abstraction.py  mission_behaviors.py  mission_executor.py  monitoring_system.py  object_detection_mission.py  return_to_operator_mission.py  robust_behavior_tree.py  ros2_types.py  sample_collection_mission.py  system_health_monitor.py  teleoperation_data_processor.py  waypoint_navigation_mission.py
monitoring/: prometheus.yml
output/: README.md
reports/: COMPREHENSIVE_SYSTEM_STATUS_REPORT.md  DEPLOYMENT.md  README.md  end_to_end_benchmark_results.json  enhanced_fault_report.json  final_test_summary.py  resource_optimization_test_results_20260104_225032.json  simple_resource_test_results_20260104_225501.json
resource_budgeting_results/: resource_budgeting_report_1768197569.json
scripts/: README.md  build.sh  (+36 more)
src/autonomy/bt/: CMakeLists.txt  README.md
src/autonomy/bt/behavior_trees/: README_MISSIONS.md
src/autonomy/bt/include/autonomy_bt/: blackboard_keys.hpp
src/autonomy/bt/src/: bt_debugger.cpp  bt_orchestrator.cpp  jazzy_bt_orchestrator.cpp
src/autonomy/control/hardware_interface/: CMakeLists.txt  __init__.py  hardware_interface_node.py  motor_controller.py  setup.cfg  setup.py
src/autonomy/control/hardware_interface/launch/: hardware_interface.launch.py
src/autonomy/control/hardware_interface/scripts/: hardware_interface_node.py
src/autonomy/interfaces/autonomy_interfaces/: CMakeLists.txt  aoi_monitor_node.py  aoi_tracker.py
src/autonomy/interfaces/autonomy_interfaces/action/: ExecuteMission.action
src/autonomy/interfaces/autonomy_interfaces/msg/: AdaptiveAction.msg  ContextState.msg  ContextUpdate.msg  MonitoringStats.msg  QoSNetworkStats.msg  QoSTopicProfile.msg  SafetyAlert.msg  SystemState.msg
src/autonomy/interfaces/autonomy_interfaces/srv/: GetAdaptationHistory.srv  GetBlackboardValue.srv  GetContext.srv  GetNetworkAOIStatus.srv  GetNetworkStats.srv  GetQoSProfile.srv  GetSafetyStatus.srv  LoadBlackboardSnapshot.srv  SaveBlackboardSnapshot.srv  SetBlackboardValue.srv  VerifySafetyProperty.srv
src/autonomy/perception/computer_vision/: CMakeLists.txt  lightweight_vision.py  setup.cfg
src/autonomy/perception/computer_vision/autonomy_computer_vision/: computer_vision_node.py
src/simulation/gazebo_simulation/: CMakeLists.txt
src/simulation/gazebo_simulation/config/: sensor_parameters.yaml
src/simulation/gazebo_simulation/test_scenarios/: README.md  autonomous_waypoint_navigation.py  dynamic_obstacle_avoidance.py  endurance_slam_test.py  gps_denied_slam.py  sensor_failure_recovery.py  urc_challenge_simulation.py
src/simulation/gazebo_simulation/tools/: fault_injection_framework.py
src/vision_processing/: CMakeLists.txt  setup.py
src/vision_processing/vision_processing/: vision_processing_node.py
(+2766 files in other folders)
