[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urc-machiato-2026"
version = "1.0.0"
description = "University Rover Challenge 2026 Robotics Platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "URC Machiato 2026 Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.8"
dependencies = [
    # Core documentation
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",

    # Multi-language support
    "breathe>=4.35.0",           # C++ documentation
    "sphinx-js>=3.1.2",          # JavaScript/TypeScript documentation
    "myst-parser>=0.18.0",       # Markdown support

    # Additional extensions
    "sphinx-copybutton>=0.5.0",  # Copy button for code blocks
    "sphinx-autodoc-typehints>=1.19.0",

    # Behavior Tree (HIGH PRIORITY REPLACEMENT)
    "py-trees>=2.1.0",           # Mature behavior tree library
    # Note: py-trees-ros is not available via pip, install via ROS2 packages instead
    # "py-trees-ros>=2.0.0",       # ROS2 integration for BT (install via apt: ros-humble-py-trees-ros)

    # Circuit Breaker Enhancement
    "circuitbreaker>=1.3.0",     # Mature circuit breaker library

    # Robotics-Specific Libraries (HIGH PRIORITY)
    "rtree>=1.0.0",             # Spatial indexing for fast queries (used in demos)
    "shapely>=2.0.0",           # Geometric operations (used in demos)

    # Computer Vision ML Enhancement
    "torch>=2.0.0",             # PyTorch for ML-based vision
    "torchvision>=0.15.0",      # Computer vision models
    "detectron2>=0.6.0",        # Facebook's CV library (feature-flagged in computer_vision_node)

    # Time Series & Telemetry (HIGH PRIORITY)
    "polars>=0.19.0",           # Fast DataFrame library (Rust-based)
    "influxdb-client>=1.36.0",  # Time-series data storage
    "apache-arrow>=13.0.0",     # Columnar data format

    # Async & Concurrency Enhancement
    "aiofiles>=23.1.0",         # Async file operations
    "aiomultiprocess>=0.9.0",   # CPU-intensive task processing

    # Memory Profiling
    "pympler>=1.0.0",           # Memory profiling and analysis
    "objgraph>=3.6.0",          # Object graph visualization

    # Development and testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",

    # Logging and monitoring
    "structlog>=23.1.0",

    # Data science (for analysis scripts)
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",

    # Phase 1: Core Infrastructure (High Impact)
    "pydantic>=2.0.0",           # Data validation & settings management
    "pydantic-settings>=2.0.0",  # Environment-aware configuration
    "tenacity>=8.2.0",           # Retry patterns & circuit breakers

    # Phase 2: Performance & Monitoring
    "orjson>=3.9.0",             # Fast JSON serialization
    "uvloop>=0.17.0; sys_platform == 'linux'",  # Faster asyncio (Linux only)

    # Phase 3: Advanced Features
    "sqlalchemy>=2.0.0",         # ORM for data persistence
    "alembic>=1.12.0",           # Database migrations
    "redis>=4.6.0",              # Caching and pub/sub
    "fastapi>=0.100.0",          # Modern API framework
    "uvicorn[standard]>=0.23.0", # ASGI server
    # ROS2 Python packages (when installed via pip, typically from system packages)
    # Note: Most ROS2 packages come from system installation, but some Python-only packages can be pip-installed
    "websockets>=11.0.0",        # WebSocket support for bridges
    "python-socketio>=5.8.0",   # Socket.IO support
    "aiohttp>=3.9.0",           # Async HTTP client/server
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "breathe>=4.35.0",
    "sphinx-js>=3.1.2",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinxcontrib-plantuml>=0.25",
    "networkx>=3.0",
    "pyyaml>=6.0",
]
dev = [
    # Code Quality (HIGH PRIORITY: Replace flake8 + isort with ruff)
    "ruff>=0.1.0",               # Fast Python linter (replaces flake8 + isort)
    "mypy>=1.5.0",               # Type checking
    "pre-commit>=3.5.0",         # Git hooks for quality gates

    # Advanced Testing (HIGH PRIORITY)
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",    # Async test support
    "pytest-xdist>=3.3.0",       # Parallel test execution
    "pytest-timeout>=2.1.0",     # Test timeouts
    "pytest-mock>=3.11.0",       # Enhanced mocking
    "pytest-factoryboy>=2.5.0",  # Test data factories
    "responses>=0.24.0",         # Mock HTTP responses
    "freezegun>=1.2.0",          # Time mocking for deterministic tests
    "hypothesis>=6.80.0",        # Property-based testing
    "coverage[toml]>=7.2.0",     # Enhanced coverage reporting
    
    # ROS2 Jazzy Testing (install via apt: ros-jazzy-launch-testing ros-jazzy-launch-testing-ros)
    # Note: launch_testing and launch_testing_ros are ROS2 system packages
    # Install with: sudo apt install ros-jazzy-launch-testing ros-jazzy-launch-testing-ros
    # These enable launch file testing and ROS2-native test infrastructure

    # Performance Testing
    "pytest-benchmark>=4.0.0",   # Performance benchmarking
    "pyperf>=2.6.0",            # Microbenchmarking

    # Memory & Profiling (HIGH PRIORITY)
    "memory-profiler>=0.61.0",   # Memory usage profiling
    "line-profiler>=4.1.0",      # Line-by-line performance profiling
    "pympler>=1.0.0",           # Memory profiling and analysis
    "objgraph>=3.6.0",          # Object graph visualization

    # Developer Experience
    "rich>=13.5.0",              # Beautiful CLI output
    "typer>=0.9.0",              # Modern CLI framework
    "questionary>=2.0.0",        # Interactive prompts

    # Legacy tools (keep for migration period)
    "black>=22.0.0",             # Code formatting (ruff will replace)
    "isort>=5.10.0",             # Import sorting (ruff will replace)
    "flake8>=4.0.0",             # Linting (ruff will replace)
]
analysis = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/SJSURoboticsTeam/urc-machiato-2026"
Documentation = "https://urc-machiato-2026.readthedocs.io/"
Repository = "https://github.com/SJSURoboticsTeam/urc-machiato-2026"
Issues = "https://github.com/SJSURoboticsTeam/urc-machiato-2026/issues"

[tool.setuptools]
# Note: Package structure is handled by ROS2 colcon, not setuptools
# packages = ["scripts"]  # Disabled for Docker compatibility

[tool.ruff]
# Replace flake8, isort, and provide additional capabilities
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Enable comprehensive rule set
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # Line too long (handled by line-length)
    "E203",  # Whitespace before ':' (conflicts with black)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "src", "simulation"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"test_*.py" = ["E501"]  # Allow longer lines in tests
"docs/**/*.py" = ["INP001"]  # Allow implicit namespace packages in docs
"simulation/**/*.py" = ["INP001"]  # Allow implicit namespace packages in simulation

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | frontend/node_modules
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "roslib.*",
    "sensor_msgs.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov=simulation --cov=missions --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src", "simulation", "missions"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\\\):",  # Exclude Protocol classes from coverage
    "@(abc\\.)?abstractmethod",
]
